# streamcapture

./: README.md  main.py  pyproject.toml
app/: jsonchat.py  online_status.py
app/config/: settings.py
app/database/: create_db.py  createtables.sql  db_query.py  db_writes.py  dbactions.py
app/database/db/: append.sql  cam.db  capcam.sqlite3-shm  insert 2nd db.sql  last_broadcast.sql
app/database/db-2/: capcam-2.sqlite3  capcam-2.sqlite3-shm  capcam-2.sqlite3-wal
app/database/db-3/: capcam.sqlite3  capcam.sqlite3-shm  capcam.sqlite3-wal
app/database/db2/: capcam-2.sqlite3-shm  capcam-2.sqlite3-wal
app/errors/: custom_errors.py
app/log/: json_log_formatter.py  logger.py  logger_config.json
app/sites/: capture_streamer.py  create_streamer.py  getstreamerurl.py
app/ui/: clivalidations.py  commandline.py
app/utils/: constants.py  general_utils.py  named_tuples.py
ui/: clivalidations.py  commandline.py
