[tool.poetry]
name = "streamercap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.5.0"
tabulate = "^0.9.0"
pandas = "^2.2.3"
httpx = "^0.27.2"
pydantic-settings = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
