[tool.poetry]
name = "streamercap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.5.0"
tabulate = "^0.9.0"
pandas = "^2.2.3"
httpx = {extras = ["http2"], version = "^0.27.2"}
pydantic-settings = "^2.6.1"

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true

[tool.pylint.messages_control]
disable="""
    logging-fstring-interpolation,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    inconsistent-return-statements,
    """

[tool.pylint.format]
max-line-length = 150


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
